# monolog

./: CMakeLists.txt  README.md  log.cpp  log.h  monolog.cpp  monolog.h
include/: monolog.hpp
src/: monolog.cpp
